# chimera-sdk

./: .gitignore  .yapfignore  CMakeLists.txt  Makefile  README.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml
branch/vivianep--opentitan-peripherals/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
branch/vivianep--opentitan-peripherals/_sources/: index.rst.txt
branch/vivianep--opentitan-peripherals/_sources/api/api_cmake/: api_cmake.rst.txt
branch/vivianep--opentitan-peripherals/_sources/usage/: build.rst.txt  structure.rst.txt  usage.rst.txt
branch/vivianep--opentitan-peripherals/api/: api.html
branch/vivianep--opentitan-peripherals/api/api_cmake/: api_cmake.html
branch/vivianep--opentitan-peripherals/api/api_hal/: api_hal.html
branch/vivianep--opentitan-peripherals/api/api_ll/: api_ll.html  api_ll_devices.html  api_ll_drivers.html
branch/vivianep--opentitan-peripherals/usage/: build.html  structure.html  usage.html
cmake/: Utils.cmake  opentitan.cmake  picolibc.cmake  toolchain_llvm.cmake
devices/: CMakeLists.txt
devices/snitch_cluster/: CMakeLists.txt  trampoline_snitchCluster.c  trampoline_snitchCluster.h
docs/: .gitignore  Doxyfile_HAL.in  Doxyfile_LL_chimera-open.in  Makefile  requirements.txt
docs/src_sphinx/: conf.py
docs/src_sphinx/api/: api.rst
docs/src_sphinx/api/api_hal/: api_hal.rst
docs/src_sphinx/api/api_ll/: api_ll.rst  api_ll_devices.rst  api_ll_drivers.rst
docs/src_sphinx/usage/: usage.rst
drivers/: CMakeLists.txt  driver.h
drivers/cluster/: CMakeLists.txt  offload_snitchCluster.c  offload_snitchCluster.h
drivers/opentitan/: CMakeLists.txt
drivers/uart_opentitan/: CMakeLists.txt
hal/: CMakeLists.txt
hal/inc/: device_api.h  uart.h
hal/src/: uart.c
scripts/: picolibc-cross-file.txt.in  run_clang_format.py
targets/: CMakeLists.txt
targets/cheshire/: CMakeLists.txt
targets/chimera-convolve/: CMakeLists.txt  common.ldh
targets/chimera-convolve/include/: cluster_4.h
targets/chimera-convolve/include/addr_maps/: cluster_4_addr_map.h  soc_addr_map.h
targets/chimera-convolve/include/regs/: cluster_4_reg.h
targets/chimera-convolve/src/: crt0.S
targets/chimera-host/: CMakeLists.txt  link.ld
targets/chimera-host/include/: soc.h
targets/chimera-host/include/addr_maps/: soc_addr_map.h
targets/chimera-host/include/regs/: soc_ctrl.h
targets/chimera-open/: CMakeLists.txt  common.ldh
targets/chimera-open/include/: soc_ctrl.h
targets/chimera-open/include/addr_maps/: soc_addr_map.h
targets/chimera-open/include/regs/: soc_ctrl.h
targets/chimera-open/src/: crt0.S  soc_ctrl.c
tests/: CMakeLists.txt
tests/chimera-host/: CMakeLists.txt
tests/chimera-host/host/: CMakeLists.txt
tests/chimera-host/host/returnZero/: CMakeLists.txt
tests/chimera-host/host/uartSimple/: CMakeLists.txt
tests/chimera-host/host/uartSimple/src_host/: test_host.c
tests/chimera-open/: CMakeLists.txt
tests/chimera-open/snitchCluster/: CMakeLists.txt
tests/chimera-open/snitchCluster/simpleOffload/: CMakeLists.txt
tests/chimera-open/snitchCluster/simpleOffload/include/: test_cluster.h  test_host.h
tests/chimera-open/snitchCluster/simpleOffload/src_cluster/: test_cluster.c
tests/chimera-open/snitchCluster/simpleOffload/src_host/: test_host.c
tests/chimera-open/testClusterOffload/: CMakeLists.txt
tests/chimera-open/testClusterOffload/src/: testClusterOffload.c
tests/generic/: CMakeLists.txt
tests/generic/testHelloWorld/: CMakeLists.txt
tests/generic/testHelloWorld/src/: testHelloWorld.c
